; ModuleID = '/home/carl/AnghaBench/h2o/deps/klib/extr_bgzf.c_bgzf_is_bgzf.c'
source_filename = "/home/carl/AnghaBench/h2o/deps/klib/extr_bgzf.c_bgzf_is_bgzf.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [2 x i8] c"r\00", align 1
@g_magic = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @bgzf_is_bgzf(i8* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i8*, align 8
  %4 = alloca [16 x i32], align 16
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store i8* %0, i8** %3, align 8
  %7 = load i8*, i8** %3, align 8
  %8 = call i32 @_bgzf_open(i8* %7, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str, i64 0, i64 0))
  store i32 %8, i32* %6, align 4
  %9 = icmp eq i32 %8, 0
  br i1 %9, label %10, label %11

10:                                               ; preds = %1
  store i32 0, i32* %2, align 4
  br label %27

11:                                               ; preds = %1
  %12 = load i32, i32* %6, align 4
  %13 = getelementptr inbounds [16 x i32], [16 x i32]* %4, i64 0, i64 0
  %14 = call i32 @_bgzf_read(i32 %12, i32* %13, i32 16)
  store i32 %14, i32* %5, align 4
  %15 = load i32, i32* %6, align 4
  %16 = call i32 @_bgzf_close(i32 %15)
  %17 = load i32, i32* %5, align 4
  %18 = icmp ne i32 %17, 16
  br i1 %18, label %19, label %20

19:                                               ; preds = %11
  store i32 0, i32* %2, align 4
  br label %27

20:                                               ; preds = %11
  %21 = load i32, i32* @g_magic, align 4
  %22 = getelementptr inbounds [16 x i32], [16 x i32]* %4, i64 0, i64 0
  %23 = call i64 @memcmp(i32 %21, i32* %22, i32 16)
  %24 = icmp eq i64 %23, 0
  %25 = zext i1 %24 to i64
  %26 = select i1 %24, i32 1, i32 0
  store i32 %26, i32* %2, align 4
  br label %27

27:                                               ; preds = %20, %19, %10
  %28 = load i32, i32* %2, align 4
  ret i32 %28
}

declare dso_local i32 @_bgzf_open(i8*, i8*) #1

declare dso_local i32 @_bgzf_read(i32, i32*, i32) #1

declare dso_local i32 @_bgzf_close(i32) #1

declare dso_local i64 @memcmp(i32, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
